Fixed deployment issues + Fixed Eureka + made multiple fixes to make sure things run correctly